# ghast

./: .pylintrc  EXAMPLES.md  LICENSE  README.md  __about__.py  action.yml  build-release.sh  example.dockerfile  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: asa-scan.yml  ghast-scan.yml
actions/: action-create-or-approves-pr-using-curl.yml  action-creates-or-approves-pr-using-gh-script.yml  action-fail-all.yml  action-that-creates-or-approves-pr.yml  action-using-configure-aws-creds-non-oidc-auth.yml  action-using-github-cache.yml  action-using-self-hosted-runner-in-matrix.yml  action-using-self-hosted-runner-referenced-by-group.yml  action-using-self-hosted-runners.yml  action-using-upload-artifact-action.yml  action-with-dangerous-gh-context-variables.yml  action-with-dangerous-gh-variables-2.yml  action-with-inline-script.yml  action-with-pull-request-target.yml  action-with-remote-script.yml  action-with-unsecure-command-env-var.yml  action-with-write-all-permissions.yml  action-with-write-permissions-all-jobs.yml  action-with-write-permissions-one-job.yml  bad-action.yml
analyzer/: analyzer.py  analyzer_test.py  regex.py
